// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar renders correclty 1`] = `
<div>
  <div
    class="undefined undefined"
  >
    <div
      class="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault medium css-17o22dy-MuiAvatar-root"
      data-name="avatar"
      data-testid="avatar"
    >
      <span
        data-name="name"
        data-testid="avatar-name"
      >
        SJ
      </span>
    </div>
  </div>
</div>
`;

exports[`Avatar renders with background color 1`] = `
<div>
  <div
    class="undefined undefined"
  >
    <div
      class="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault medium css-ww4vf0-MuiAvatar-root"
      data-name="avatar"
      data-testid="avatar"
    >
      <span
        data-name="name"
        data-testid="avatar-name"
      >
        SJ
      </span>
    </div>
  </div>
</div>
`;

exports[`Avatar renders with badged 1`] = `
<div>
  <span
    class="MuiBadge-root undefined undefined css-1c32n2y-MuiBadge-root"
  >
    <div
      class="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault medium css-17o22dy-MuiAvatar-root"
      data-name="avatar"
      data-testid="avatar"
    >
      <span
        data-name="name"
        data-testid="avatar-name"
      >
        SJ
      </span>
    </div>
    <span
      class="MuiBadge-badge MuiBadge-standard MuiBadge-anchorOriginBottomRight MuiBadge-anchorOriginBottomRightCircular MuiBadge-overlapCircular css-9sufak-MuiBadge-badge"
    >
      <div
        class="MuiBox-root css-0"
        data-name="badge"
        data-status="default"
        data-testid="badge"
      >
        Badge content
      </div>
    </span>
  </span>
</div>
`;

exports[`Avatar renders with name 1`] = `
<div>
  <div
    class="undefined undefined"
  >
    <div
      class="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault medium css-17o22dy-MuiAvatar-root"
      data-name="avatar"
      data-testid="avatar"
    >
      <span
        data-name="name"
        data-testid="avatar-name"
      >
        EM
      </span>
    </div>
  </div>
</div>
`;

exports[`Avatar renders with stile primary 1`] = `
<div>
  <div
    class="undefined primary"
  >
    <div
      class="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault medium css-17o22dy-MuiAvatar-root"
      data-name="avatar"
      data-stile="primary"
      data-testid="avatar"
    >
      <span
        data-name="name"
        data-testid="avatar-name"
      >
        SJ
      </span>
    </div>
  </div>
</div>
`;
